--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -24,6 +24,19 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: '14'
+    # Begin AppMap CI language agent installation
+    # This snippet can be safely removed once the AppMap language agent has been
+    # added to the project dependencies, and appmap.yml has been created.
+    - name: Install AppMap tools
+      id: install-appmap
+      uses: getappmap/install-action@v1
+      with:
+        project-type: npm
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v9
+      with:
+        message: "ci: Add AppMap language agent and appmap.yml"
+    # End AppMap CI language agent installation
     - name: npm install, build, and test
       run: |
         npm ci
