--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push]
+on: 
+  push:
+    branches:
+      - master
+  pull_request:
+  schedule:
+    - cron: '0 0 * * 0'
 
 permissions: 
   # Allows the EndBug/add-and-commit step to commit the package manager changes,
