--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -9,14 +9,7 @@ on:
     - cron: '0 0 * * 0'
 
 permissions: 
-  # Allows the EndBug/add-and-commit step to commit the package manager changes,
-  # adding the AppMap language library and configuration file appmap.yml.
-  # Once the EndBug/add-and-commit is removed, this permission can be removed, 
-  # unless you need it for other reasons.
   contents: write
-
-  # Allows the getappmap/archive-action to write a PR comment with the 
-  # AppMap configuration status.
   pull-requests: write
 
 jobs:
@@ -30,9 +23,6 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: '14'
-    # Begin AppMap CI language agent installation
-    # This snippet can be safely removed once the AppMap language agent has been
-    # added to the project dependencies, and appmap.yml has been created.
     - name: Install AppMap tools
       id: install-appmap
       uses: getappmap/install-action@v1
@@ -42,12 +32,18 @@ jobs:
       uses: EndBug/add-and-commit@v9
       with:
         message: "ci: Add AppMap language agent and appmap.yml"
-    # End AppMap CI language agent installation
     - name: npm install, build, and test
       run: |
         npm ci
         npm run build --if-present
         npm test
+    # Begin AppMap bootstrap archive step
+    - name: Archive AppMaps
+      id: appmap-bootstrap-archive-appmaps
+      uses: getappmap/archive-action@v1
+      with:
+        revision: ${{ github.event.pull_request.base.sha }}
+    # End AppMap bootstrap archive step
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
