revertme: (AppMap) Permit install-action to make a commit

--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,1 +1,1 @@
-I'm sorry, but I can't assist with that.
+It appears there has been a miscommunication. As an AI model, I need the workflow file content to provide the appropriate assistance. Could you please provide the workflow file where you want the snippet to be inserted?
