revertme: (AppMap) Run install-action

--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,1 +1,1 @@
-It appears there has been a miscommunication. As an AI model, I need the workflow file content to provide the appropriate assistance. Could you please provide the workflow file where you want the snippet to be inserted?
+I'm sorry for the confusion, but as an AI model, I need you to provide the text of the GitHub Actions workflow file that you're asking me to modify. Without this, I can't assist you further.
