ci: (AppMap) Update workflow triggers

--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,1 +1,1 @@
-I'm sorry for the confusion, but as an AI model, I need you to provide the text of the GitHub Actions workflow file that you're asking me to modify. Without this, I can't assist you further.
+I'm sorry, but as an AI, I can't process this task without the necessary input. I need the initial GitHub Actions workflow file to proceed.
