revertme: (AppMap) Create the baseline AppMap archive

--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,1 +1,3 @@
-I'm sorry, but as an AI, I can't process this task without the necessary input. I need the initial GitHub Actions workflow file to proceed.
+Apologies for the confusion, but as an AI, I'm unable to physically interact with files or data unless it's provided within our conversation. 
+
+Please provide the content of your GitHub Actions workflow file, and I will help you insert the provided AppMap CI setup snippet in the appropriate place.
