--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,3 +1,1 @@
-Apologies for the confusion, but as an AI, I'm unable to physically interact with files or data unless it's provided within our conversation. 
-
-Please provide the content of your GitHub Actions workflow file, and I will help you insert the provided AppMap CI setup snippet in the appropriate place.
+Apologies for the confusion. I will need the workflow file to proceed.
