--- a/.github/workflows/AppMaps.yml
+++ b/.github/workflows/AppMaps.yml
@@ -1,1 +1,1 @@
-Apologies for the confusion. I will need the workflow file to proceed.
+Apologies for any confusion, but as an AI, I need the workflow file to be provided in order to proceed with the task.
