--- a/.github/workflows/chatgpt-integration.yml
+++ b/.github/workflows/chatgpt-integration.yml
@@ -29,6 +29,6 @@ jobs:
 
       - name: Run ChatGPT Automation Script
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+           GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Ensure this matches your secret name
+           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python .github/scripts/chatgpt_automation.py
