--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
-           GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Ensure this matches your secret name
-           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Ensure this matches your secret name
+
+OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+# Server Configuration
+PORT=
+
+# MongoDB Configuration
+MONGODB_URI=
+
+# JSON Web Token (JWT) Secret for User Authentication
+JWT_SECRET=
